[gd_scene load_steps=9 format=3 uid="uid://ck142j3ewqutu"]

[ext_resource type="Script" uid="uid://dcifymsfxp4b6" path="res://Scripts/unit.gd" id="1_ypl2c"]
[ext_resource type="Texture2D" uid="uid://c40cg7k0gkblf" path="res://Assets/elementals_wind_hashashin_FREE_v1.1/PNG/idle/idle_1.png" id="2_lqx2h"]
[ext_resource type="Script" path="res://Scripts/components/cooldown_component.gd" id="3_cool"]
[ext_resource type="Script" path="res://Scripts/components/health_component.gd" id="4_health"]
[ext_resource type="Script" path="res://Scripts/components/movement_component.gd" id="5_move"]
[ext_resource type="Script" path="res://Scripts/components/basic_attack_component.gd" id="6_attack"]
[ext_resource type="Script" path="res://Scripts/components/priority_component.gd" id="7_priority"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ctwoc"]

[node name="Unit" type="CharacterBody2D"]
script = ExtResource("1_ypl2c")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_lqx2h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ctwoc")

[node name="CooldownComponent" type="Node" parent="."]
script = ExtResource("3_cool")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_health")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("5_move")

[node name="BasicAttackComponent" type="Node" parent="."]
script = ExtResource("6_attack")

[node name="PriorityComponent" type="Node" parent="."]
script = ExtResource("7_priority")
